add login support for linux